# web-crawler-gridPuzzles

./: .gitignore  README.md  config.yaml  grid-puzzles.csv  main.py  puzzles.json  pyproject.toml  pytest.ini
core_crawler/: ccrawl.py
page_parser/: grid_parser.py  parse_elements.py
tests/: test_grid_parser.py
tests/data/: puzzles.json  test_parsed_puzzle_data.json
webpages/: Logic Puzzles _ Solve a Puzzle.html  Logic Puzzles _ Solve a Puzzle_p2.html  Logic Puzzles _ Solve a Puzzle_p3.html
