[project]
name = "web-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "hydra-core>=1.3.3",
    "omegaconf>=2.3.1",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "pytest>=9.1.0",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.17",
]
